管理员页面修改

--- a/src/main/webapp/views/root.html
+++ b/src/main/webapp/views/root.html
@@ -52,7 +52,7 @@
 			
 			<ul id="myTab" class="nav nav-tabs" style="margin:-1px;margin-left:10px">
 				<li class="active">
-					<a href="#grade" data-toggle="tab">班级管理</a>
+					<a href="#class" data-toggle="tab">班级管理</a>
 				</li>
 				<li><a href="#subject" data-toggle="tab">课程管理</a></li>
 				<li class="dropdown">
@@ -70,19 +70,24 @@
 				</li>
 			</ul>
 			<div id="myTabContent" class="tab-content" style="margin:15px;">
-				<div class="tab-pane fade in active" id="grade">
-					<form id="searchForm" style="margin-left: 10px;">
+				<div class="tab-pane fade in active" id="class">
+						<form id="searchClassForm" style="margin-left: 10px;">
 							<div class="form-inline">
-								<label class="control-label">教师姓名：</label>
+								<label class="control-label">工号：</label>
 								<div class="form-group">
-									<input type="text" class="form-control" name="teacherName" />
+									<input type="text" class="form-control" name="teacherNum" />
 								 </div>
-								 <button type="button" class="btn btn-primary" @click="search" >搜索</button>
+								 <label class="control-label">班级名称：</label>
+								<div class="form-group">
+									<input type="text" class="form-control" name="className" />
+								 </div>
+								 <button type="button" class="btn btn-primary" @click="classSearch" >搜索</button>
+								 <button type="button" class="btn btn-success" @click="classAdd" style="float:right">新增</button>
 							</div>
 						</form>
-						<table id="table" data-classes="table table-hover" 
+						<table id="classTable" data-classes="table table-hover" 
 							data-pagination="true" data-toggle="table"
-							data-query-params="queryParams"
+							data-query-params="queryClassParams"
 							data-url="http://localhost:8080/SSMall/class/queryClassList"
 							data-id-field="id">
 							<thead>
@@ -91,63 +96,127 @@
 									<th data-field="classNum">班级编号</th>
 									<th data-field="className">班级名称</th>
 									<th data-field="teacherNum">教师工号</th>
-									<th data-field="teacherName">教师姓名</th>
+									<!-- <th data-field="teacherName">教师姓名</th> -->
 									<th data-field="id">操作</th>
 								</tr>
 							</thead>
 						</table>
 				</div>
 				<div class="tab-pane fade" id="subject">
-					<p>iOS 是一个由苹果公司开发和发布的手机操作系统。最初是于 2007 年首次发布 iPhone、iPod Touch 和 Apple 
-						TV。iOS 派生自 OS X，它们共享 Darwin 基础。OS X 操作系统是用在苹果电脑上，iOS 是苹果的移动版本。</p>
-				</div>
-				<div class="tab-pane fade" id="student">
-						<form id="searchForm" style="margin-left: 10px;">
+						<form id="searchSubjectForm" style="margin-left: 10px;">
 							<div class="form-inline">
-								<label class="control-label">批改状态：</label>
+								<label class="control-label">工号：</label>
 								<div class="form-group">
-									<select class="form-control selectpicker" name="state" v-model="job.state" data-live-search="false"
-										data-size="10">
-										<option data-tokens="全部" value="" selected>全部</option>
-										<option data-tokens="未批改" value="1">未提交</option>
-										<option data-tokens="已批改" value="2">未批改</option>
-										<option data-tokens="已批改" value="3">已批改</option>
-									</select>
-								</div>
-								<label class="control-label">科目：</label>
-								<div class="form-group">
-									<select class="form-control" name="subject" v-model="job.subject">  
-										  <option v-for="subject in subjects" v-bind:value="subject.value">  
-										    {{ subject.text }}  
-										  </option>  
-										</select> 
+									<input type="text" class="form-control" name="teacherNum" />
 								 </div>
-								 <button type="button" class="btn btn-primary" @click="search" >搜索</button>
+								 <label class="control-label">课程名称：</label>
+								<div class="form-group">
+									<input type="text" class="form-control" name="subName" />
+								 </div>
+								 <button type="button" class="btn btn-primary" @click="subjectSearch" >搜索</button>
+								 <button type="button" class="btn btn-success" @click="subjectAdd" style="float:right">新增</button>
 							</div>
 						</form>
-						<table id="table" data-classes="table table-hover" 
+						<table id="subjectTable" data-classes="table table-hover" 
 							data-pagination="true" data-toggle="table"
-							data-query-params="queryParams"
-							data-url="http://localhost:8080/SSMall/working/queryWorkList"
+							data-query-params="querySubjectParams"
+							data-url="http://localhost:8080/SSMall/subject/querySubjectList"
 							data-id-field="id">
 							<thead>
 								<tr>
 									<th data-formatter="rowNoFormatter">序号</th>
-									<th data-field="updateTime">修改时间</th>
-									<th data-field="subNum" data-formatter="deliveryTypeFormatter">科目</th>
-									<th data-field="title">作业题目</th>
-									<th data-field="teacherName">发布人</th>
-									<th data-field="stuName">学生姓名</th>
-									<th data-field="state" data-formatter="stateFormatter">作业状态</th>
-									<th data-field="question" data-formatter="questionFormatter">题目</th>
+									<th data-field="subNum">课程编号</th>
+									<th data-field="subName">课程名称</th>
+									<th data-field="teacherNum">教师工号</th>
+									<!-- <th data-field="teacherName">教师姓名</th> -->
+									<th data-field="id">操作</th>
+								</tr>
+							</thead>
+						</table>
+				</div>
+				<div class="tab-pane fade" id="student">
+						<form id="searchStudentForm" style="margin-left: 10px;">
+							<div class="form-inline">
+								<label class="control-label">班级：</label>
+								<div class="form-group">
+									<select class="form-control" name="grade" v-model="job.grade">  
+										  <option v-for="grade in grades" v-bind:value="grade.value">  
+										    {{ grade.text }}  
+										  </option>  
+										</select> 
+								 </div>
+								 <label class="control-label">学号：</label>
+								<div class="form-group">
+									<input type="text" class="form-control" name="num" />
+								 </div>
+								 <label class="control-label">姓名：</label>
+								<div class="form-group">
+									<input type="text" class="form-control" name="name" />
+								 </div>
+								 <label class="control-label">电话：</label>
+								<div class="form-group">
+									<input type="text" class="form-control" name="phone" />
+								 </div>
+								 <button type="button" class="btn btn-primary" @click="studentSearch" >搜索</button>
+								 <button type="button" class="btn btn-success" @click="studentAdd" style="float:right">新增</button>
+							</div>
+						</form>
+						<table id="studentTable" data-classes="table table-hover" 
+							data-pagination="true" data-toggle="table"
+							data-query-params="queryStudentParams"
+							data-url="http://localhost:8080/SSMall/student/queryStudentList"
+							data-id-field="id">
+							<thead>
+								<tr>
+									<th data-formatter="rowNoFormatter">序号</th>
+									<th data-field="num"> 学号</th>
+									<th data-field="grade">专业班级</th>
+									<th data-field="name">姓名</th>
+									<th data-field="sex">性别</th>
+									<th data-field="phone">电话</th>
+									<th data-field="mail">邮箱</th>
+									<th data-field="id">操作</th>
 									
 								</tr>
 							</thead>
 						</table>
 				</div>
 				<div class="tab-pane fade" id="teacher">
-					<p>Enterprise Java Beans（EJB）是一个创建高度可扩展性和强大企业级应用程序的开发架构，部署在兼容应用程序服务器（比如 JBOSS、Web Logic 等）的 J2EE 上。
-					</p>
+					<form id="searchTeacherForm" style="margin-left: 10px;">
+							<div class="form-inline">
+								<label class="control-label">工号：</label>
+								<div class="form-group">
+									<input type="text" class="form-control" name="num" />
+								 </div>
+								 <label class="control-label">姓名：</label>
+								<div class="form-group">
+									<input type="text" class="form-control" name="name" />
+								 </div>
+								 <label class="control-label">电话：</label>
+								<div class="form-group">
+									<input type="text" class="form-control" name="phone" />
+								 </div>
+								 <button type="button" class="btn btn-primary" @click="teacherSearch" >搜索</button>
+								 <button type="button" class="btn btn-success" @click="teacherAdd" style="float:right">新增</button>
+							</div>
+						</form>
+						<table id="teacherTable" data-classes="table table-hover" 
+							data-pagination="true" data-toggle="table"
+							data-query-params="queryTeacherParams"
+							data-url="http://localhost:8080/SSMall/teacher/queryTeacherList"
+							data-id-field="id">
+							<thead>
+								<tr>
+									<th data-formatter="rowNoFormatter">序号</th>
+									<th data-field="num"> 工号</th>
+									<th data-field="name">姓名</th>
+									<th data-field="sex">性别</th>
+									<th data-field="phone">电话</th>
+									<th data-field="mail">邮箱</th>
+									<th data-field="id">操作</th>
+								</tr>
+							</thead>
+						</table>
 				</div>
 			</div>
 		</div>
@@ -166,8 +235,29 @@ var vm = new Vue({
     	subjects:[]
     },
     methods: {
-    	search :function(){
-    		$("#table").bootstrapTable('refresh');
+    	classSearch :function(){
+    		$("#classTable").bootstrapTable('refresh');
+    	},
+    	subjectSearch :function(){
+    		$("#subjectTable").bootstrapTable('refresh');
+    	},
+    	studentSearch :function(){
+    		$("#studentTable").bootstrapTable('refresh');
+    	},
+    	teacherSearch :function(){
+    		$("#teacherTable").bootstrapTable('refresh');
+    	},
+    	classAdd :function(){
+    		
+    	},
+    	subjectAdd :function(){
+    		
+    	},
+		studentAdd :function(){
+    		
+    	},
+    	teacherAdd :function(){
+    		
     	},
     	submit :function(){
     		var answers = pacageData();
@@ -220,14 +310,8 @@ var vm = new Vue({
     					 }           	 
     		        }
     		    });
-    	},
-    	
-    	//更新个人信息
-    	updateUserInfo :function(){
-    		console.log("更新");
-    		$("#studentModal").modal();
-    		//$('#studentInfoForm')[0].reset();
     	}
+    	
     },
     mounted: function () {
     	$(window).resize(function() {
@@ -249,6 +333,7 @@ function initStuClass(){
         url: url,
         dataType:"json",
         success: function(resultData){
+        	
 			if(resultData.state==0){//查询成功
 				var options = [];
 				var flag={
@@ -308,120 +393,16 @@ function initSubject(){
         }
     });
 }
+//柔和灰（text-muted）、主要蓝（text-primary）、成功绿（text-success）、信息蓝（text-info）、警告黄（text-warning）、危险红（text-danger）
 //序号
 function rowNoFormatter(value, row, index){
-	var options = $("#table").bootstrapTable('getOptions');  
+	var options = $("#classTable").bootstrapTable('getOptions');  
     return options.pageSize * (options.pageNumber - 1) + index + 1;
-}
-//柔和灰（text-muted）、主要蓝（text-primary）、成功绿（text-success）、信息蓝（text-info）、警告黄（text-warning）、危险红（text-danger）
-//作业状态
-function stateFormatter(value, row, index) {
-	if (value == "1") {
-		return "<span class='text-danger'>未提交</span>";
-	} else if(value == "2"){
-		return "<span class='text-muted'>未批改</span>";
-	}else{
-		return "<span class='text-success'>已批改</span>";
-	}
-}
-//班级信息
-function classNameFormatter(value, row, index) {
-	var grades = vm.grades;
-	for (var i = 0; i < grades.length; i++) {
-		if(grades[i].value==value){
-			return "<span class='text-info'>"+grades[i].text+"</span>";
-		}
-	}
-	return "<span class='text-info'></span>";
-}
-//科目信息
-function deliveryTypeFormatter(value, row, index) {
-	var subjects = vm.subjects;
-	for (var i = 0; i < subjects.length; i++) {
-		if(subjects[i].value==value){
-			return "<span class='text-info'>"+subjects[i].text+"</span>";
-		}
-	}
-	return "<span class='text-info'></span>";
 }
 //作业详情
 function questionFormatter(value, row, index){
 	return [ "<a href='javascript:void(0)' onclick='workingInfo(\""+row.id+"\",\""+row.title+"\",\""+row.state+"\",\""+row.question+"\",\""+row.answer+"\",\""+row.grade+"\" )' class='btn btn-xs ' title='查看'>查看</a>" ].join('');
 }
-//作业编辑
-function workingInfo(id,title,state,question,answer,grade){
-	$("#workingModal").modal();
-	$('#answerForm')[0].reset();
-	ID = id;
-	$("#title").text(title);
-	var questions = question.split(":;");
-	var answers;
-	if(state!="1"){//待审批状态
-		answers = answer.split(":;");
-	}
-	if(state=="3"){//已审批状态
-		var grades = grade.split(":;");
-		var html = '';
-		for (var i = 0; i < questions.length; i++) {
-			var question = questions[i];
-			var answer = answers[i];
-			var	grade = grades[i];
-			html += '<div class="form-group" name="workgroup" style="padding-bottom:10px; border-bottom:1px solid #A9C9E2" >'
-				+'<p><i>Q:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><i>'+question+'</i><p>'
-				+'<p><i>A:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><i>'+answer+'</i><p>'
-				+'<p><i>点评:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><i>'+grade+'</i><p>'
-				+'</div>';
-		}
-		$("#answerForm").html(html);
-		$("#modalFoot").hide();
-	}else{
-		var html = '';
-		var i;
-		for (i = 0; i < questions.length; i++) {
-			var question = questions[i];
-			var answer = "";
-			if(state=="2"){
-				answer = answers[i];
-			}
-			html += '<div class="form-group" id = "answergroup'+i+'" style="padding-bottom:20px; border-bottom:1px solid #A9C9E2">'
-				+'<p><i>Q:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><i>'+question+'</i><p>'
-				+'<div>'
-				+'<i>A:</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'
-				+'<textarea rows="3" class="form-control" name="answer" id = "answer'+i+'">'+answer+'</textarea>'
-				+'</div>'
-				+'</div>'
-		}
-		flag = i;
-		$("#answerForm").html(html);
-	}
-	
-	
-}
-//获取表单数据
-function pacageData(){
-	var data=""
-	for(var i = 0;i < flag; i++){
-		if(($("#answer"+i+"").length)>0){
-			data = data + $("#answer"+i+"").val() + ":;"
-		}
-	}
-	return data.substring(0,data.length-2);
-	
-}
-//获取Url参数
-function getUrlParam(){
-    var url = location.search; //获取url中"?"符后的字串   
-    var theRequest = new Object();   
-    if (url.indexOf("?") != -1) {   
-       var str = url.substr(1);   
-       strs = str.split("&");   
-       for(var i = 0; i < strs.length; i ++) {   
-          theRequest[strs[i].split("=")[0]]=unescape(strs[i].split("=")[1]);   
-       }   
-    }   
-    return theRequest;   
-}
-
 
 //表单提交前再进行一次验证
 function onsubmitFn() {
@@ -491,6 +472,50 @@ function validateForm(){
 	    }
 	});
 
+}
+//封装班级列表参数
+function queryClassParams(params) {
+	var query = $("#searchClassForm").serializeJSON();
+	query["pageNumber"] = params.pageNumber;
+	query["pageSize"] = params.pageSize;
+	if (params.sortName) {
+		query["sortName"] = params.sortName;
+		query["sortOrder"] = params.sortOrder;
+	}
+	return query;
+}
+//封装课程列表参数
+function querySubjectParams(params) {
+	var query = $("#searchSubjectForm").serializeJSON();
+	query["pageNumber"] = params.pageNumber;
+	query["pageSize"] = params.pageSize;
+	if (params.sortName) {
+		query["sortName"] = params.sortName;
+		query["sortOrder"] = params.sortOrder;
+	}
+	return query;
+}
+//封装班级列表参数
+function queryStudentParams(params) {
+	var query = $("#searchStudentForm").serializeJSON();
+	query["pageNumber"] = params.pageNumber;
+	query["pageSize"] = params.pageSize;
+	if (params.sortName) {
+		query["sortName"] = params.sortName;
+		query["sortOrder"] = params.sortOrder;
+	}
+	return query;
+}
+//封装班级列表参数
+function queryTeacherParams(params) {
+	var query = $("#searchTeacherForm").serializeJSON();
+	query["pageNumber"] = params.pageNumber;
+	query["pageSize"] = params.pageSize;
+	if (params.sortName) {
+		query["sortName"] = params.sortName;
+		query["sortOrder"] = params.sortOrder;
+	}
+	return query;
 }
 </script>
 </html>
