--- a/src/main/webapp/views/student.html
+++ b/src/main/webapp/views/student.html
@@ -245,7 +245,7 @@ var vm = new Vue({
     		if(!onsubmitFn()){
     			return ;
     		}
-    		var url = baseUrl+"/student/update";
+    		var url = baseUrl+"/student/updateStudent";
     		$.ajax({
     		        type: "POST",
     		        url: url,
