--- a/src/main/webapp/views/register.html
+++ b/src/main/webapp/views/register.html
@@ -135,7 +135,12 @@ var vm = new Vue({
 	   	        dataType:"json",
 	   	        success: function(resultData){
 	   				if(resultData.state==0){//保存成功
-	   					window.location.href = baseUrl + "/views/login.html";
+	   					layer.msg('保存成功，3秒之后返回首页', {
+	   						  icon: 1,
+	   						});
+	   					setTimeout(function(){
+	   						window.location.href = baseUrl + "/views/login.html";
+	   					},3000);
 	   				 }else{
 	   					layer.msg('注册失败，请重新提交', {
 	   						  icon: 0,
@@ -152,7 +157,6 @@ var vm = new Vue({
     	validateForm();
       }
 });
-
 function initStuClass(){
 	var url = baseUrl+"/class/list";
 	 $.ajax({
@@ -213,7 +217,12 @@ function validateForm(){
 	            validators: {
 	                notEmpty: {
 	                    message: "学号不能为空"
-	                }
+	                },
+	                stringLength: {//检测长度  
+                        min: 4,  
+                        max: 30,  
+                        message: '学号必须在4-30之间'  
+                    }
 	            }
 	        },
 	        password: {
@@ -223,9 +232,9 @@ function validateForm(){
 	        			message: "学号不能为空"
 	        		},
 	        		stringLength: {//检测长度  
-                        min: 6,  
+                        min: 4,  
                         max: 30,  
-                        message: '密码长度必须在6-30之间'  
+                        message: '密码长度必须在4-30之间'  
                     },
 	        	}
 	        },
@@ -271,37 +280,10 @@ function validateForm(){
                         message: '请输入正确的邮箱地址'  
                     },  
 	            }
-	        },
+	        }
 	    }
 	});
 
 }
-
-/* 
-
-layer.confirm('解绑前，请先与营销人员沟通确认，您确定要解绑吗?', function() {
-			$.ajax({
-		        type: "POST",
-		        url: url,
-		        data: paramData,
-		        dataType:"json",
-		        success: function(resultData){
-		        	if(resultData.state=="0"){
-		        		$("#confirmedModal").modal("hide");
-						$('#tb_role').bootstrapTable('refresh');
-						layer.msg("解绑成功!", {
-		        			icon : 1
-		        		});
-					}else{
-						layer.msg("解绑失败!", {
-		        			icon : 0
-		        		});
-						
-					}
-		        }
-		    });
-	});
-*
-*/
 </script>
 </html>
