--- a/src/main/webapp/views/working.html
+++ b/src/main/webapp/views/working.html
@@ -61,14 +61,20 @@
 	    		</div>
 				<form class="form-horizontal" id="questionForm" style="margin-top: 20px;">
 							 	<div class="row">
-							 		<div class="col-md-1 col-md-offset-3" style="margin-top:20px">
+							 		<div class="form-group">
+										<label class="col-md-1 col-md-offset-3 control-label">作业名称：</label>
+										<div class="col-sm-4">
+											<input type="text" class="form-control" name="question" id="title" placeholder="请输入作业名称"/>
+										</div>
+									</div>
+							 		<!-- <div class="col-md-1 col-md-offset-3" style="margin-top:20px">
 										<label>作业名称：</label>
 									</div>
 									<div class="col-sm-4">
 								 		<div class="form-group" >
 									  		<textarea rows="3" class="form-control" name="question" id="title" style="width:545px"></textarea>
 										</div>
-									</div>
+									</div> -->
 							 	</div>
 								
 								<div class="form-group" id="que0Group">
